--- a/Group Presentation.qmd
+++ b/Group Presentation.qmd
@@ -95,3 +95,5 @@ fetch_movies_by_language <- function(lang) {
 all_movies <- future_map_dfr(languages, fetch_movies_by_language, .progress = TRUE)
 
 ```
+
+aaa
