--- a/DATA.Rmd
+++ b/DATA.Rmd
@@ -19,13 +19,18 @@ library(jsonlite)
 library(furrr)
 library(tidyverse)
 library(future)
+library(httr)
+library(jsonlite)
+library(tibble)
+library(furrr)
+library(dplyr)
 ```
 
 
 ## API SETUP:
 
 ```{r}
-usethis::edit_r_environ()
+#usethis::edit_r_environ()
 
 api_key <- Sys.getenv("api_key")
 
@@ -33,6 +38,187 @@ api_key <- Sys.getenv("api_key")
 
 ## NEW SCRAPING
 scrapes for the movie id, title, year of release, popularity score, original language, poster
+
+```{r}
+
+
+# ✅ Enable parallel processing (4 workers)
+plan(multisession, workers = 4)
+
+# ✅ Define time range
+start_year <- 2000
+end_year <- as.numeric(format(Sys.Date(), "%Y"))
+
+# ✅ Define selected languages
+languages <- c("es", "fr", "de", "tr", "ja", "ru", "zh", "ko", "pt", "hi", "it")
+set.seed(123)
+
+### **STEP 1: Fetch Top 50 Movies Per Language (Faster)**
+fetch_movies_by_language <- function(lang) {
+  movies_list <- list()
+
+  for (page in 1:2) {  # ✅ Limit to first 2 pages (~50 movies per language)
+    movie_url <- paste0("https://api.themoviedb.org/3/discover/movie?api_key=", api_key,
+                        "&sort_by=popularity.desc",
+                        "&primary_release_date.gte=", start_year, "-01-01",
+                        "&primary_release_date.lte=", end_year, "-12-31",
+                        "&vote_count.gte=500",
+                        "&with_original_language=", lang,
+                        "&page=", page)
+
+    response <- tryCatch({
+      GET(movie_url, timeout(10))
+    }, error = function(e) NULL)
+
+    Sys.sleep(runif(1, 1, 2))  # ✅ Shorter delay (1-2 sec)
+
+    if (!is.null(response) && status_code(response) == 200) {
+      movies <- fromJSON(content(response, "text", encoding = "UTF-8"))$results
+
+      if (!is.null(movies) && length(movies) > 0) {
+        movie_df <- tibble(
+          movie_id = movies$id,
+          title = movies$title,
+          release_year = substr(movies$release_date, 1, 4),
+          popularity = movies$popularity,
+          original_language = movies$original_language,
+          poster_path = paste0("https://image.tmdb.org/t/p/w500", movies$poster_path)
+        )
+        movies_list <- append(movies_list, list(movie_df))
+      }
+    }
+  }
+
+  if (length(movies_list) > 0) {
+    return(bind_rows(movies_list))
+  } else {
+    return(NULL)
+  }
+}
+
+# ✅ Fetch movies in parallel
+all_movies <- future_map_dfr(languages, fetch_movies_by_language, .options = furrr_options(seed = TRUE))
+
+#  Save movies dataset
+write.csv(all_movies, "optimized_movies.csv", row.names = FALSE)
+
+print(dim(all_movies))
+head(all_movies)
+
+```
+
+
+
+```{r}
+library(httr)
+library(jsonlite)
+library(dplyr)
+library(furrr)
+
+# ✅ Enable parallel processing (4 workers)
+plan(multisession, workers = 4)
+
+# ✅ Define time range
+start_year <- 2000
+end_year <- as.numeric(format(Sys.Date(), "%Y"))
+
+# ✅ Define countries
+countries <- c("US", "GB", "DE", "FR", "TR", "IN", "JP", "ES", "IT", "BR")
+
+# ✅ Define selected languages
+languages <- c("es", "fr", "de", "tr", "ja", "ru", "zh", "ko", "pt", "hi", "it")
+
+### **STEP 1: Fetch Top 50 Movies Per Language (Faster)**
+fetch_movies_by_language <- function(lang) {
+  movies_list <- list()
+
+  for (page in 1:2) {  # ✅ Limit to first 2 pages (~50 movies per language)
+    movie_url <- paste0("https://api.themoviedb.org/3/discover/movie?api_key=", api_key,
+                        "&sort_by=popularity.desc",
+                        "&primary_release_date.gte=", start_year, "-01-01",
+                        "&primary_release_date.lte=", end_year, "-12-31",
+                        "&vote_count.gte=500",
+                        "&with_original_language=", lang,
+                        "&page=", page)
+
+    response <- tryCatch({
+      GET(movie_url, timeout(10))
+    }, error = function(e) NULL)
+
+    Sys.sleep(runif(1, 1, 2))  # ✅ Shorter delay (1-2 sec)
+
+    if (!is.null(response) && status_code(response) == 200) {
+      movies <- fromJSON(content(response, "text", encoding = "UTF-8"))$results
+
+      if (!is.null(movies) && length(movies) > 0) {
+        movie_df <- tibble(
+          movie_id = movies$id,
+          title = movies$title,
+          release_year = substr(movies$release_date, 1, 4),
+          popularity = movies$popularity,
+          original_language = movies$original_language,
+          poster_path = paste0("https://image.tmdb.org/t/p/w500", movies$poster_path)
+        )
+        movies_list <- append(movies_list, list(movie_df))
+      }
+    }
+  }
+
+  if (length(movies_list) > 0) {
+    return(bind_rows(movies_list))
+  } else {
+    return(NULL)
+  }
+}
+
+# ✅ Fetch movies in parallel
+all_movies <- future_map_dfr(languages, fetch_movies_by_language, .progress = TRUE, .options = furrr_options(seed = TRUE))
+
+### **STEP 2: Fetch Regional Release Dates**
+fetch_regional_release_dates <- function(movie) {
+  movie_id <- movie$movie_id
+  title <- movie$title
+  lang <- movie$original_language
+
+  regional_release_dates <- future_map_dfr(countries, function(country) {
+    release_dates_url <- paste0("https://api.themoviedb.org/3/movie/", movie_id,
+                                "/release_dates?api_key=", api_key)
+
+    response <- tryCatch({
+      GET(release_dates_url, timeout(8))
+    }, error = function(e) NULL)
+
+    Sys.sleep(runif(1, 1, 2))  # ✅ Less waiting time
+
+    if (!is.null(response) && status_code(response) == 200) {
+      release_dates_data <- fromJSON(content(response, "text", encoding = "UTF-8"))$results
+      country_release_date <- release_dates_data[release_dates_data$iso_3166_1 == country, ]
+
+      if (nrow(country_release_date) > 0) {
+        return(tibble(
+          movie_id = movie_id,
+          title = title,
+          language = lang,
+          country = country,
+          release_date = country_release_date$release_dates[[1]]$release_date
+        ))
+      }
+    }
+    return(NULL)
+  }, .progress = TRUE)
+
+  return(regional_release_dates)
+}
+
+# ✅ Fetch regional release dates in parallel for multiple movies at once
+all_movies_regional_release_dates <- future_map_dfr(split(all_movies, seq(nrow(all_movies))), fetch_regional_release_dates, .progress = TRUE)
+
+# ✅ Save final dataset
+write.csv(all_movies_regional_release_dates, "movies_with_regional_release_dates.csv", row.names = FALSE)
+
+print(dim(all_movies_regional_release_dates))
+head(all_movies_regional_release_dates)
+```
 
 ```{r}
 library(httr)
@@ -102,150 +288,26 @@ write.csv(all_movies, "optimized_movies.csv", row.names = FALSE)
 
 print(dim(all_movies))
 head(all_movies)
-
 ```
-
-
-
-
-
-
-## Getting the data from TMDB -- OLD ONE
-STEP 1: Fetch Top 50 Movies Per Language
-STEP 2: Fetch Popularity by Country
 
 ```{r}
 
-## ✅ Enable parallel processing (4 workers)
-# plan(multisession, workers = 4)
-# 
-# 
-# # ✅ Define time range
-# start_year <- 2000  
-# end_year <- as.numeric(format(Sys.Date(), "%Y"))
-# 
-# # ✅ Define countries
-# countries <- c("US", "GB", "DE", "FR", "TR", "IN", "JP", "ES", "IT", "BR")
-# 
-# # ✅ Define selected languages
-# languages <- c("es", "fr", "de", "tr", "ja", "ru", "zh", "ko", "pt", "hi", "it")
-# 
-# ### **STEP 1: Fetch Top 50 Movies Per Language (Faster)**
-# fetch_movies_by_language <- function(lang) {
-#   movies_list <- list()
-#   
-#   for (page in 1:2) {  # ✅ Limit to first 2 pages (~50 movies per language)
-#     movie_url <- paste0("https://api.themoviedb.org/3/discover/movie?api_key=", api_key,
-#                         "&sort_by=popularity.desc",
-#                         "&primary_release_date.gte=", start_year, "-01-01",
-#                         "&primary_release_date.lte=", end_year, "-12-31",
-#                         "&vote_count.gte=500",
-#                         "&with_original_language=", lang,
-#                         "&page=", page)
-# 
-#     response <- tryCatch({
-#       GET(movie_url, timeout(10))
-#     }, error = function(e) NULL)
-# 
-#     Sys.sleep(runif(1, 1, 2))  # ✅ Shorter delay (1-2 sec)
-# 
-#     if (!is.null(response) && status_code(response) == 200) {
-#       movies <- fromJSON(content(response, "text", encoding = "UTF-8"))$results
-# 
-#       if (!is.null(movies) && length(movies) > 0) {
-#         movie_df <- tibble(
-#           movie_id = movies$id,
-#           title = movies$title,
-#           language = lang,  
-#           popularity = movies$popularity,
-#           genre_ids = sapply(movies$genre_ids, function(x) paste(x, collapse = ",")) # ✅ Store genre codes
-#         )
-#         movies_list <- append(movies_list, list(movie_df))
-#       }
-#     }
-#   }
-# 
-#   if (length(movies_list) > 0) {
-#     return(bind_rows(movies_list))
-#   } else {
-#     return(NULL)
-#   }
-# }
-# 
-# # ✅ Fetch movies in parallel
-# all_movies <- future_map_dfr(languages, fetch_movies_by_language, .progress = TRUE)
-# 
-# # ✅ Save movies dataset
-# write.csv(all_movies, "optimized_movies.csv", row.names = FALSE)
-# 
-# print(dim(all_movies))  
-# head(all_movies)
-# 
-# 
-# ### **STEP 2: Fetch Popularity by Country (Parallel & Faster)**
-# fetch_popularity_by_country <- function(movie) {
-#   movie_id <- movie$movie_id
-#   title <- movie$title
-#   lang <- movie$language
-#   genre <- movie$genre_ids
-# 
-#   country_popularity_list <- future_map_dfr(countries, function(country) {
-#     country_url <- paste0("https://api.themoviedb.org/3/movie/", movie_id,
-#                           "?api_key=", api_key, "&region=", country)
-# 
-#     response <- tryCatch({
-#       GET(country_url, timeout(8))  # ✅ Shorter timeout
-#     }, error = function(e) NULL)
-# 
-#     Sys.sleep(runif(1, 1, 2))  # ✅ Less waiting time
-# 
-#     if (!is.null(response) && status_code(response) == 200) {
-#       country_data <- fromJSON(content(response, "text", encoding = "UTF-8"))
-#       return(tibble(
-#         movie_id = movie_id,
-#         title = title,
-#         language = lang,
-#         genre_ids = genre,
-#         country = country,
-#         popularity = country_data$popularity
-#       ))
-#     }
-#     return(NULL)
-#   }, .progress = TRUE)
-# 
-#   return(country_popularity_list)
-# }
-# 
-# # ✅ Fetch popularity in parallel for multiple movies at once
-# all_movies_popularity <- future_map_dfr(split(all_movies, seq(nrow(all_movies))), fetch_popularity_by_country, .progress = TRUE)
-# 
-# # ✅ Save final dataset
-# write.csv(all_movies_popularity, "movies_with_popularity.csv", row.names = FALSE)
-# 
-# print(dim(all_movies_popularity))  
-# head(all_movies_popularity)
+library(fuzzyjoin)
+
+merged_df <- stringdist_inner_join(all_movies, all_movies_regional_release_dates, 
+                                   by = "title", max_dist = 2, method = "jw")
+
+# View result
+print(dim(merged_df))
+head(merged_df)
 
 
-```
+merged_df<- merged_df %>%
+  select(movie_id = movie_id.x, title = title.x, release_year, popularity, 
+         original_language, poster_path, language, country, release_date)
 
 
-## Popularity  OLD ONE
-
-```{r}
-# movies_with_popularity <- read_csv("movies_with_popularity.csv")
-# 
-# 
-# all_movies_popularity<- movies_with_popularity
-# 
-# 
-# df_summarized <- all_movies_popularity %>%
-#   group_by(movie_id, title, language, genre_ids, country) %>%
-#   summarise(popularity = mean(popularity, na.rm = TRUE), .groups = "drop")  # Ortalama alınarak tekil hale getirildi
-# 
-# 
-# all_movies_popularity <- df_summarized %>%
-#   pivot_wider(names_from = country, values_from = popularity, values_fill = list(popularity = NA))
-# 
+head(merged_df)
 
 ```
 
@@ -296,7 +358,7 @@ write.csv(oscar_movies_clean, "oscar_winning_films.csv", row.names = FALSE)
 
 ## Getting Venice's Golden Lions
 
-```{r}
+```{r} 
 library(scrapex)
 library(rvest)
 library(dplyr)
@@ -337,7 +399,7 @@ write.csv(golden_lion_clean, "venice_film_festival_winners.csv", row.names = FAL
 
 ## Getting Cannes' Palme D'Or
 
-```{r}
+```{r} 
 
 # Load necessary libraries
 library(rvest)
@@ -496,7 +558,7 @@ write.csv(merged_data, "merged_awards_data.csv", row.names = FALSE)
 ```{r}
 
 awards_data <-  merged_data
-movies_data <-  all_movies_popularity
+movies_data <-  merged_df
 
 final_data <- left_join(movies_data, awards_data, by = "title")
 
