--- a/DATA.Rmd
+++ b/DATA.Rmd
@@ -477,7 +477,7 @@ write.csv(merged_data_awards, "merged_awards_data.csv", row.names = FALSE)
 ## Merging the whole dataset
 
 ```{r}
-
+library(tidyverse)
 
 final_data <- left_join(movies_data, awards_data, by = "title")
 
@@ -533,11 +533,7 @@ final_data <- read.csv("final_data.csv")
 
 
 
-<<<<<<< Updated upstream
-=======
 
-
->>>>>>> Stashed changes
 # 1. Number of Movies by Year
 ggplot(final_data, aes(x = as.factor(release_year))) +
   geom_bar(fill = "blue", alpha = 0.7) +
@@ -591,15 +587,12 @@ ggplot(top_languages, aes(x = reorder(language, n), y = n)) +
 ```
 
 ```{r}
-<<<<<<< Updated upstream
 df <- df %>%
   dplyr::select(-year, -country.y, -original_language) %>%
   rename(country = country.x)
-=======
 
 
 
->>>>>>> Stashed changes
 
 # Get top 10 countries producing the most movies
 top_countries <- final_data %>%
@@ -633,9 +626,9 @@ ggplot(df, aes(x = popularity, y = total_awards)) +
 ```
 
 ```{r}
-<<<<<<< Updated upstream
-word_data <- df %>%
-=======
+
+
+
 
 library(tidytext)  
 library(ggwordcloud)  
@@ -644,7 +637,6 @@ library(ggplot2)
 library(stopwords)
 
 word_data <- final_data %>%
->>>>>>> Stashed changes
   filter(!is.na(title)) %>%
   unnest_tokens(word, title) %>%
   count(word, sort = TRUE) %>%
@@ -664,7 +656,6 @@ ggplot(word_data, aes(label = word, size = n, color = n)) +
 ```
 
 ```{r}
-<<<<<<< Updated upstream
 df_countries <- df %>%
   select(title, country) %>%
   filter(!is.na(country)) %>%
@@ -672,14 +663,13 @@ df_countries <- df %>%
 
 # Generate country pairs for each movie
 edges <- df_countries %>%
-=======
+
 library(dplyr)
 library(tidyr)
 library(igraph)
 library(ggraph)
 
 df_pairs <- final_data %>%
->>>>>>> Stashed changes
   group_by(title) %>%
   summarise(
     country_pairs = if (n_distinct(country) > 1) {
@@ -1022,7 +1012,6 @@ top_10_movies <- grouped_data %>%
 ```
 
 
-::: {.panel-tabset .nav-pills}
 ## Awards Distribution
 to show the distribution of different awards won by the top 10 movies
 ### all movies
@@ -1059,7 +1048,7 @@ highchart() %>%
   hc_subtitle(text = "Top 10 Most Popular Movies")
 
 ```
-:::
+
 
 ## Top Movies by Popularity
 
